
<resources>
    <string name="app_name">Payment Gateway</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_message">"The user was logged out"</string>

    <!-- Main Menu -->
    <string name="menu_newPayment_button">Pay</string>
    <string name="menu_showPayments_button">Show Payments</string>
    <string name="menu_logout_button">Logout</string>

    <!-- Payment Form -->
    <string name="paymentForm_user_name_hint">Name</string>
    <string name="paymentForm_user_email_hint">Email</string>
    <string name="paymentForm_user_cellphone_hint">Cellphone</string>
    <string name="paymentForm_card_number_hint">Card Number</string>
    <string name="paymentForm_card_dueDate_hint">Due Date</string>
    <string name="paymentForm_card_cvv2_hint">CVV2</string>
    <string name="paymentForm_amount_hint">Amount</string>
    <string name="paymentForm_submit_buttton">Submit</string>
    <string name="paymentForm_user_section_label">Personal Info</string>
    <string name="paymentForm_card_section_label">Credit Card</string>
    <string name="paymentForm_invalid_user_name">Name should have at least 2 letters</string>
    <string name="paymentForm_invalid_user_email">Invalid email</string>
    <string name="paymentForm_invalid_user_cellphone">Invalid cellphone</string>
    <string name="paymentForm_invalid_card_number">Card number must be at least 10 numbers</string>
    <string name="paymentForm_invalid_card_due_monthYear">Invalid. Use mm/yyyy format</string>
    <string name="paymentForm_invalid_card_cvv">Invalid CVV</string>
    <string name="paymentForm_invalid_amount">Invalid Amount</string>
    <string name="paymentForm_progress_dialog_title">Sending checkout…</string>

    <!-- Payment List -->
    <string name="transactionDetailDialog_dialogTitle">Transaction Details</string>
    <string name="transactionDetailDialog_action_button_delete">Delete</string>

    <!-- victor.valencia This is test data for easy testing, avoid this in real productions app -->
    <string name="default_test_username">6dd490faf9cb87a9862245da41170ff2</string>
    <string name="default_test_password">024h1IlD</string>
    <string name="paymentFragment_checkout_genericError">Checkout Faile: %1$s</string>
    <string name="paymentList_no_data">NO DATA TO SHOW</string>
</resources>
