<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.paymentForm.PaymentFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_all">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:text="@string/paymentForm_user_section_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paymentForm_user_name_hint"
                app:startIconDrawable="@drawable/ic_assignment_ind_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_newPayment_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paymentForm_user_email_hint"
                app:startIconDrawable="@drawable/ic_email_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_newPayment_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paymentForm_user_cellphone_hint"
                app:startIconDrawable="@drawable/ic_contact_phone_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_newPayment_user_cellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:text="@string/paymentForm_card_section_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:hint="@string/paymentForm_card_number_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_credit_card_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_newPayment_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:hint="@string/paymentForm_card_dueDate_hint"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
            app:startIconDrawable="@drawable/ic_today_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_newPayment_card_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_all"
            android:hint="@string/paymentForm_card_cvc_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            app:startIconDrawable="@drawable/ic_security_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_newPayment_card_cvc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:hint="@string/paymentForm_amount_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:startIconDrawable="@drawable/ic_monetization_on_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_newPayment_payment_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:layout_marginBottom="@dimen/margin_all"
            android:text="@string/paymentForm_submit_buttton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>